# dep

./: CMakeLists.txt  README.md
cmake/: geoip.cmake
github.com/c-ares/c-ares/: CMakeLists.txt
github.com/libressl-portable/portable/: CMakeLists.txt
github.com/maxmind/geoip-api-c/: CMakeLists.txt
script/: build-msys2-amd64.sh  build-windows-amd64.bat
