cmake_minimum_required(VERSION 3.1.0)
project(dep NONE)
if(NOT ("${CMAKE_BUILD_TYPE}" STREQUAL "Release"))
  message(FATAL_ERROR "Unsupported build type.")
endif()
if("${MK_DEP_WINDOWS_FORCE_CRT_MT}")
  string(REPLACE "/MD" "/MT" CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")
  string(REPLACE "/MD" "/MT" CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE}")
endif()
add_subdirectory(${MK_DEP_DEPNAME})
